--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body{
-	background-image: url("mars.image");
+	background-image: url("mars.gif");
     background-position: center;
     background-size: cover;
 }
